# santec-lab-instruments

./: pyproject.toml
plugin_system/: base_device.py  plugin_loader.py
plugin_system/plugins/: agilent_86142_plugin.py
santec_lab_instruments.egg-info/: PKG-INFO  SOURCES.txt
